<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        />




    <FrameLayout
        android:id="@+id/FragmentProvider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:layout_above="@+id/bottomLL"
        >

    </FrameLayout>



    <LinearLayout
        android:id="@+id/bottomLL"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="#FFF"
        android:orientation="horizontal"
        android:weightSum="3"
        >


        <RelativeLayout
            android:id="@+id/scannerBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                >

                <ImageView
                    android:id="@+id/scannerIC"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/scanner_ic"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:id="@+id/scannerTV"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="@string/scanner"
                    android:textColor="#666666"
                    />

            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/myItemsBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                >

                <ImageView
                    android:id="@+id/myItemsIC"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/my_items_ic"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:id="@+id/myItemsTV"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="@string/myItems"
                    android:textColor="#666666"
                    />

            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/languageBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                >

                <ImageView
                    android:id="@+id/langIC"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/language_ic"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:id="@+id/languageTV"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="@string/languages"
                    android:textColor="#666666"
                    />

            </LinearLayout>

        </RelativeLayout>




    </LinearLayout>

</RelativeLayout>
